# LifeBox

./: .editorconfig  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  CLAUDE.md  README.md  codecov.yml  frontend-loading-flow.md  lifebox-architecture-final.md  package-lock.json  package.json  playwright.config.ts  test-plugin-loading.html
.cargo/: config.toml
.claude/: index.json
.github/workflows/: ci.yml  ci.yml.test  pr-checks.yml
backend/: .env.test  jest.config.js  package.json  tsconfig.json
backend/data/: plugin-repository.json
backend/prisma/: schema.prisma
backend/public/: plugins-repository.json
backend/src/: app-old.ts  app.ts  http-router.ts  server.ts  simple-server.ts
backend/src/database/: connection.ts
backend/src/events/: event-bus.ts  event-handlers.ts  websocket-server.ts
backend/tests/: setup.ts
docs/: README.md
frontend/: .env.development  .env.example  components.json  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx  verify-plugin-system.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
plugins/chat-plugin/: README.dev.md  README.md  chat-plugin.js  dev-server.js  load-dev-plugin.js  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
plugins/simple-test-plugin/: README.md  build.js  manifest.json  plugin.css  plugin.js  plugin.ts  tsconfig.json
scripts/: build.sh  dev-setup.sh  dev.sh  test.sh  validate-setup.sh
shared/: package.json  tsconfig.json
shared/src/: index.ts
(+95 files in other folders)
